@@ -112,18 +112,6 @@
 				<scope>test</scope>
 			</dependency>
 			<dependency>
-				<groupId>org.powermock</groupId>
-				<artifactId>powermock-api-mockito</artifactId>
-				<version>${powermock.version}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.powermock</groupId>
-				<artifactId>powermock-module-junit4</artifactId>
-				<version>${powermock.version}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>4.12</version>
@@ -140,10 +128,10 @@
 	<properties>
         <openmrsPlatformVersion>2.5.0</openmrsPlatformVersion>
 		<legacyUIomodVersion>1.8.2</legacyUIomodVersion>
-		<webservices.restModuleVersion>2.40.0</webservices.restModuleVersion>
+		<webservices.restModuleVersion>3.2.0</webservices.restModuleVersion>
 		<serializationxstreamVersion>0.2.14</serializationxstreamVersion>
-		<mockito.version>1.10.19</mockito.version>
-		<powermock.version>1.7.3</powermock.version>
+		<mockito.version>4.5.1</mockito.version>
+		<powermock.version>2.0.9</powermock.version>
     </properties>
 
 	<build>
@@ -155,6 +143,14 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
+				<configuration>
+					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
